--- a/challenges/templates/challenges/challenge.html
+++ b/challenges/templates/challenges/challenge.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Monthly Challenge</title>
+    <!--<title>Monthly Challenge</title> -->
+    <title>{{ month }} Challenge</title>
 </head>
+
 <body>
-    <h1>This Month's Challenge</h1>
-    <h2>Go for walk for at least 20 minutes every day!</h2>
+    <h1>{{ month }} Challenge</h1>
+    <h2>{{ text }}</h2>
 </body>
+
 </html>
