--- a/challenges/templates/challenges/challenge.html
+++ b/challenges/templates/challenges/challenge.html
@@ -5,12 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!--<title>Monthly Challenge</title> -->
-    <title>{{ month }} Challenge</title>
+    <title>{{ month|title }} Challenge</title>
 </head>
 
 <body>
-    <h1>{{ month }} Challenge</h1>
+    <h1>{{ month|title }} Challenge</h1>
     <h2>{{ text }}</h2>
 </body>
 
