--- a/challenges/templates/challenges/challenge.html
+++ b/challenges/templates/challenges/challenge.html
@@ -1,20 +1,15 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends 'base.html' %}
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{ month|title }} Challenge</title>
-</head>
+{% block page_title %}
+    {{month|title}} Challenge
+{% endblock %}
 
-<body>
+
+{% block content %}
     <h1>{{ month|title }} Challenge</h1>
     {% if text is not None %}
         <h2>{{ text }}</h2>
     {% else %}
         <p>There is no challenge for this month yet!</p>
     {% endif %}
-</body>
-
-</html>
+{% endblock %}
