--- a/challenges/templates/challenges/index.html
+++ b/challenges/templates/challenges/index.html
@@ -1,20 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends 'base.html' %}
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>All Challenges</title>
-</head>
+{% block page_title %}
+    All Challenges
+{% endblock %}
 
-<body>
+{% block content %}
     <ul>
     {% for month in months %}
         <li><a href="{% url 'month-challenge' month %}">{{month|title}}</a></li>
     {% endfor %}
     </ul>
-
-</body>
-
-</html>
+{% endblock %}
