partial template snippets with includes tag

--- a/challenges/templates/challenges/challenge.html
+++ b/challenges/templates/challenges/challenge.html
@@ -6,6 +6,8 @@
 
 
 {% block content %}
+    {% include 'challenges/includes/header.html' %}
+
     <h1>{{ month|title }} Challenge</h1>
     {% if text is not None %}
         <h2>{{ text }}</h2>
