--- a/challenges/templates/challenges/index.html
+++ b/challenges/templates/challenges/index.html
@@ -4,6 +4,7 @@
 
 {% block css_files %}
     <link rel="stylesheet" href="{% static 'challenges/challenges.css' %}">
+    <link rel="stylesheet" href="{% static 'challenges/includes/header.css' %}">
 {% endblock %}
 
 {% block page_title %}
