--- a/challenges/static/challenges/challenge.css
+++ b/challenges/static/challenges/challenge.css
@@ -18,5 +18,19 @@ h2 {
 
 .fallback {
   text-align: center;
-  color: white;
+  color: black;
+}
+
+.container {
+  background-color: #eeeeee;
+  max-width: 30rem;
+  margin: 0 auto;
+  padding: 1rem;
+  border-radius: 12px;
+}
+
+.container__text {
+  color: black;
+  font-size: 1.5rem;
+  text-align: center;
 }
